--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Open Graph: Take Control of Your Snippets on Facebook" />
+  <meta property="og:description" content="You do the same for SEO, right?" />
+  <meta property="og:url" content="https://www.contentkingapp.com/academy/open-graph/" />
+  <meta property="og:site_name" content="ContentKing" />
+  <meta property="og:image" content="https://i.pinimg.com/736x/de/75/76/de75764e764c997a2ada049f992dcc00--lenses.jpg" />
+  <meta property="og:image:secure_url" content="https://www.contentkingapp.com/media/social-cards/og-en-contentking-open-graph@2x.png" />
+
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
