--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image:secure_url" content="https://www.contentkingapp.com/media/social-cards/og-en-contentking-open-graph@2x.png" />
 
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/images/avatar.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -32,7 +32,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <title>React App</title>
+  <title>My CV (Hồ An)</title>
 </head>
 
 <body>
